# naef-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.yml  init_120.json  init_20.json  init_203.json  init_5.json  init_50.json  init_600.json  init_80.json  plot_metrics.py  storage_analysis.py
deploy/: README.md  reset-local.sh  reset.sh
deploy/kda/: .env.example  docker-compose.yml  entrypoint.sh  sync.sh
deploy/tebs/: .env.example  docker-compose.yml  entrypoint.sh
deploy/vda/: .env.example  docker-compose.yml  entrypoint.sh  sync.sh
docker/kda/: entrypoint-router.sh  entrypoint.sh  sync.sh
docker/tebs/: entrypoint-router.sh  entrypoint.sh
docker/vda/: entrypoint.sh  sync.sh
runs/: README.md
runs/Campaign1_FragmentCountScaling/: build_lifecycle.py  init.json  plot_analysis.py  vda_metrics.csv
runs/Campaign2_EpochIntervalScaling/: plot_analysis.py
runs/analysis/: combine_figures.py
src/: crypt.rs  dsmtp.rs  kda.rs  kda_service.rs  main.rs  main_old.rs  tebs.rs  vda.rs  vda_service.rs
